@@ -1,5 +1,9 @@
 2011-12-15  Theppitak Karoonboonyanan  <thep@linux.thai.net>
 
+	* Makefile.am: Use LATEX_PACKAGE for CTAN package names.
+
+2011-12-15  Theppitak Karoonboonyanan  <thep@linux.thai.net>
+
 	* Makefile.am: Add original source to TDS zip file.
 
 2011-12-15  Theppitak Karoonboonyanan  <thep@linux.thai.net>
